feat(video): 完善音频粗筛与 Kafka 异步片段分析 (#15)
加入视频与片段线程池、执行租约和持久化恢复，支持部分完成与阶段展示；片段上限调整为 8，补充迁移脚本、回归测试和 Kafka 压测报告。

Co-authored-by: Aloys_y <Aloys_y@noreply.gitcode.com>